After profiling, graph_get_node_by_id() and graph_update_saturation_degrees() were found to be bottle necks to algorithm performance.  The implementation of these algorithms were improved, and now DSATUR algorithm solves instances with 1000+ nodes and 10000+ edges in < 1000 ms.

--- a/coloring/Makefile
+++ b/coloring/Makefile
@@ -9,6 +9,7 @@ SRC = src
 # Compiler and compiler options
 CC = gcc
 CFLAGS = -c
+LDFLAGS = 
 
 SOURCES = $(SRC)/main.c $(SRC)/graph.c $(SRC)/graph.h $(SRC)/utils.h
 SOURCES += $(SRC)/coloring_solver.c $(SRC)/coloring_solver.h $(SRC)/pqueue.c
@@ -19,14 +20,15 @@ EXE = coloring_solver
 all: CFLAGS += -O3
 all: $(EXE)
 
-debug: CFLAGS += -g -DDEBUG -Wall
+debug: CFLAGS += -g -DDEBUG -Wall -pg
+debug: LDFLAGS += -pg
 debug: $(EXE)
 
 clean:
 	rm $(BIN)/*.o $(BIN)/$(EXE)
 
 $(EXE): $(OBJS)
-	$(CC) $(OBJS) -o $(BIN)/$@
+	$(CC) $(LDFLAGS) $(OBJS) -o $(BIN)/$@
 
 $(OBJS): $(SOURCES)
 	$(CC) $(CFLAGS) $(subst bin,src,$(subst .o,.c,$@)) -o $@
